# Predictable-steering

./: .gitattributes  .gitignore  README.md  RUN_CAA_TOP10.sh  RUN_SAE_DIFFMEAN_TOP10.sh  check_scores.py  pyproject.toml  requirements.txt  run_all.sh  run_modal_sleep.py
axbench/: __init__.py
axbench/models/: mean.py  model.py
axbench/scripts/: create_expanded_open_ended_contrastive.py  create_open_ended_contrastive.py  diffmean_separability.py  directional_agreement.py  eval_caa_axbench_judge.py  eval_caa_open_ended.py  eval_kl_divergence.py  evaluate.py  generate.py  inference.py  judge_behavior_fluency_stats.py  mcqa_adaptive_steer.py  mcqa_projection_link.py  mcqa_test_steer_and_project.py  mcqa_train_diffmean_sweep.py  open_ended_eval.py  open_ended_plot.py  open_ended_projection_link.py  pca_contrastive.py  pca_variance_correlation.py  plot_axbench_comparison.py  plot_caa_results.py  plot_kl_divergence.py  plot_manual_annotation_vs_original.py  plot_mcqa_vs_open_ended.py  power_test.ipynb  power_test.py  prepare_axbench_concepts.py  projection_lda.py  projection_probe.py  projection_steerability_link.py  projection_vs_steering_factor.py  rejudge_sweep.py  replot_mcqa_modal.py  replot_sweep.py  retrieve_eval_from_sample.py  sae_diffmean_train.py  sample_steering_sheet.py  single_example_steering.py  steering_meta_analysis.py  (+7 more)
axbench/utils/: constants.py
docs/: mcqa_projection_experiment.md  projection_steerability_experiment.md
scripts/: make_paper_plots.py  make_paper_tables.py  mcqa_projection_link.py  replot_mcqa_projection_plots.py
(+21 files in other folders)
