[project]
name = "predictable-steering"
version = "0.1.0"
description = "Reproduction code for: Predictable Steering — Leveraging Geometric Proxies for Layer Selection and Per-Instance Success."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.45.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "tqdm>=4.65",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
